// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infotip > renders default infotip 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"infotip"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Important information"[39m
          [33mclass[39m=[32m"infotip__host icon-btn icon-btn--transparent"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-information-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8 7a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm1-2a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"[39m
                [36m/>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm2 0a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-information-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
        [36m<span[39m
          [33mclass[39m=[32m"infotip__overlay"[39m
          [33mid[39m=[32m"s0-0-overlay"[39m
          [33mrole[39m=[32m"tooltip"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"infotip__pointer"[39m
          [36m/>[39m
          [36m<span[39m
            [33mclass[39m=[32m"infotip__mask"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"infotip__cell"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"infotip__content"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"infotip__heading"[39m
                  [33mid[39m=[32m"s0-0-@base-0-4-tourtip-label"[39m
                [36m>[39m
                  [0mImportant[0m
                [36m</span>[39m
                [36m<p>[39m
                  [0mThis is some important info[0m
                [36m</p>[39m
              [36m</span>[39m
              [36m<button[39m
                [33maria-label[39m=[32m"Dismiss infotip"[39m
                [33mclass[39m=[32m"icon-btn icon-btn--transparent infotip__close"[39m
                [33mtype[39m=[32m"button"[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"icon icon--16"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-close-16"[39m
                      [33mviewBox[39m=[32m"0 0 16 16"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-close-16"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</button>[39m
            [36m</span>[39m
          [36m</span>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`infotip > renders default infotip disabled 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"infotip"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Important information"[39m
          [33mclass[39m=[32m"infotip__host icon-btn icon-btn--transparent"[39m
          [33mdisabled[39m=[32m""[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-information-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8 7a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm1-2a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"[39m
                [36m/>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm2 0a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-information-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
        [36m<span[39m
          [33mclass[39m=[32m"infotip__overlay"[39m
          [33mid[39m=[32m"s0-0-overlay"[39m
          [33mrole[39m=[32m"tooltip"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"infotip__pointer"[39m
          [36m/>[39m
          [36m<span[39m
            [33mclass[39m=[32m"infotip__mask"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"infotip__cell"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"infotip__content"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"infotip__heading"[39m
                  [33mid[39m=[32m"s0-0-@base-0-4-tourtip-label"[39m
                [36m>[39m
                  [0mImportant[0m
                [36m</span>[39m
                [36m<p>[39m
                  [0mThis is some important info[0m
                [36m</p>[39m
              [36m</span>[39m
              [36m<button[39m
                [33maria-label[39m=[32m"Dismiss infotip"[39m
                [33mclass[39m=[32m"icon-btn icon-btn--transparent infotip__close"[39m
                [33mtype[39m=[32m"button"[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"icon icon--16"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-close-16"[39m
                      [33mviewBox[39m=[32m"0 0 16 16"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-close-16"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</button>[39m
            [36m</span>[39m
          [36m</span>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`infotip > renders default infotip open 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"infotip"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Important information"[39m
          [33mclass[39m=[32m"infotip__host icon-btn icon-btn--transparent"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-information-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8 7a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm1-2a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"[39m
                [36m/>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm2 0a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-information-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
        [36m<span[39m
          [33mclass[39m=[32m"infotip__overlay"[39m
          [33mid[39m=[32m"s0-0-overlay"[39m
          [33mrole[39m=[32m"tooltip"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"infotip__pointer"[39m
          [36m/>[39m
          [36m<span[39m
            [33mclass[39m=[32m"infotip__mask"[39m
          [36m>[39m
            [36m<span[39m
              [33mclass[39m=[32m"infotip__cell"[39m
            [36m>[39m
              [36m<span[39m
                [33mclass[39m=[32m"infotip__content"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"infotip__heading"[39m
                  [33mid[39m=[32m"s0-0-@base-0-4-tourtip-label"[39m
                [36m>[39m
                  [0mImportant[0m
                [36m</span>[39m
                [36m<p>[39m
                  [0mThis is some important info[0m
                [36m</p>[39m
              [36m</span>[39m
              [36m<button[39m
                [33maria-label[39m=[32m"Dismiss infotip"[39m
                [33mclass[39m=[32m"icon-btn icon-btn--transparent infotip__close"[39m
                [33mtype[39m=[32m"button"[39m
              [36m>[39m
                [36m<svg[39m
                  [33maria-hidden[39m=[32m"true"[39m
                  [33mclass[39m=[32m"icon icon--16"[39m
                  [33mfocusable[39m=[32m"false"[39m
                [36m>[39m
                  [36m<defs>[39m
                    [36m<symbol[39m
                      [33mid[39m=[32m"icon-close-16"[39m
                      [33mviewBox[39m=[32m"0 0 16 16"[39m
                    [36m>[39m
                      [36m<path[39m
                        [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                      [36m/>[39m
                    [36m</symbol>[39m
                  [36m</defs>[39m
                  [36m<use[39m
                    [33mhref[39m=[32m"#icon-close-16"[39m
                  [36m/>[39m
                [36m</svg>[39m
              [36m</button>[39m
            [36m</span>[39m
          [36m</span>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`infotip modal > renders default 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span>[39m
    [36m<span>[39m
      [36m<span[39m
        [33mclass[39m=[32m"infotip dialog--mini"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Important information"[39m
          [33mclass[39m=[32m"dialog--mini__host icon-btn icon-btn--transparent"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-information-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8 7a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V8a1 1 0 0 0-1-1Zm1-2a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"[39m
                [36m/>[39m
                [36m<path[39m
                  [33md[39m=[32m"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm2 0a6 6 0 1 0 12 0A6 6 0 0 0 2 8Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-information-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
      [36m</span>[39m
    [36m</span>[39m
  [36m</span>[39m
  [36m<div[39m
    [33maria-label[39m=[32m"Important information"[39m
    [33maria-labelledby[39m=[32m"s0-0-5-@dialog-dialog-title"[39m
    [33maria-modal[39m=[32m"true"[39m
    [33mclass[39m=[32m"lightbox-dialog lightbox-dialog--mask-fade"[39m
    [33mhidden[39m=[32m""[39m
    [33mrole[39m=[32m"dialog"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"lightbox-dialog__window lightbox-dialog__window--animate"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"lightbox-dialog__header"[39m
      [36m>[39m
        [36m<h2[39m
          [33mclass[39m=[32m"lightbox-dialog__title"[39m
          [33mid[39m=[32m"s0-0-5-@dialog-dialog-title"[39m
        [36m>[39m
          [0mImportant[0m
        [36m</h2>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Dismiss infotip"[39m
          [33mclass[39m=[32m"icon-btn lightbox-dialog__close"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-close-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-close-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"lightbox-dialog__main"[39m
      [36m>[39m
        [36m<p>[39m
          [0mThis is some important info[0m
        [36m</p>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
